# triton-ext

./: .gitignore  CMakeLists.txt  LICENSE  README.md  triton.txt
.github/: CODEOWNERS
.github/actions/build-llvm/: action.yml
.github/actions/build-triton/: action.yml
.github/workflows/: ci.yml
ci/: download-artifact.py  download-artifacts.py  fetch-artifact-id.py  fetch-llvm-hash-from-triton.py  fetch-llvm-hash.py  fetch-triton-hash.py  probe-sysinfo.py
cmake/: utils.cmake
infra/: CMakeLists.txt
infra/pass/: CMakeLists.txt  TritonExtPass.cpp  TritonExtPassInfra.cpp  TritonExtPassInfra.h
pass/: CMakeLists.txt  README.md
pass/LoopSplit/: CMakeLists.txt  LoopSplit.cpp  Passes.td  triton_ext.conf
pass/LoopSplit/test/: loop-split.mlir
passes/: CMakeLists.txt
passes/LoopSplit/: CMakeLists.txt  LoopSplit.cpp  Passes.td
passes/api/: CMakeLists.txt  PassPlugin.cpp  PassPlugin.h
