set(TRITON_EXT_PASS_INFRA_DIR "${TRITON_EXT_INFRA_DIR}/pass")

include_directories(${TRITON_EXT_PASS_INFRA_DIR})

file(GLOB EXT_PASS_DIRS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*")
foreach(EXT_PASS_DIR ${EXT_PASS_DIRS})
    if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${EXT_PASS_DIR}")
        set(EXT_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/${EXT_PASS_DIR}")
        add_subdirectory(${EXT_PASS_DIR} ${EXT_BUILD_DIR})
    endif()
endforeach()
